After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768294 - fail-whale-dialog: Fix -Wmaybe-uninitialized warning
fail-whale-dialog: Fix -Wmaybe-uninitialized warning
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-07-01 17:25 UTC by Michael Catanzaro
Modified: 2016-07-01 22:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fail-whale-dialog: Fix -Wmaybe-uninitialized warning (1.21 KB, patch)
2016-07-01 17:25 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2016-07-01 17:25:49 UTC
Don't try to use the uninitialized fail image in the case no icon was
found, just show no image.
Comment 1 Michael Catanzaro 2016-07-01 17:25:52 UTC
Created attachment 330734 [details] [review]
fail-whale-dialog: Fix -Wmaybe-uninitialized warning
Comment 2 Cosimo Cecchi 2016-07-01 22:31:10 UTC
Review of attachment 330734 [details] [review]:

Looks fine to me FWIW
Comment 3 Michael Catanzaro 2016-07-01 22:33:37 UTC
Attachment 330734 [details] pushed as 80db9b5 - fail-whale-dialog: Fix -Wmaybe-uninitialized warning