fail-whale-dialog: Fix -Wmaybe-uninitialized warning

https://bugzilla.gnome.org/show_bug.cgi?id=768294